cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8.txt
../dataset/june2020_dataset_copy/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/test/fromlist/Test.java:37: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.InputStream $$ regular method exit $$ ( 1120, 1180 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		InputStream in = Test.class.getResourceAsStream("test.xml");
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
